# contact-form-manager

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  contact.py  docker-compose.yml  lambdahandler.py  requirements.txt  run-local.py  run.py  setup.cfg  setup.py  zappa_settings.json
.github/workflows/: ci.yml  production.yml  python-pkg.yml  staging.yml
apiContact/: manage.py
apiContact/apiContact/: asgi.py  settings.py  urls.py  wsgi.py
apiContact/manageContact/: apps.py  models.py  serializers.py  urls.py  views.py
apiContact/manageContact/migrations/: 0001_initial.py
apiContact/manage_contact/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apiContact/manage_contact/migrations/: 0001_initial.py
application/: __init__.py  commands.py  forms.py  models.py  routes.py
application/templates/: contact-form.html  example.html  thanks-for-contact.html
contact/contact/: settings.py
contact/manager/: forms.py  models.py  urls.py  views.py
contact/manager/migrations/: 0001_initial.py  0002_auto_20200618_2347.py  0003_auto_20200620_0628.py
contact/templates/manager/: contact.html  data.html
datwit_contact_form/: config.py  contact_manager.py  errors.py
jsclient/: package.json  webpack.config.js
jsclient/src/: utiles.js
jsclient/src/controllers/: component_controller.js
misc/: send_data.xml  send_response.xml
tests/: conftest.py  test_default.py  test_save_contact.py  test_send_email.py  test_validate_honey_pot.py
