[bumpversion]
current_version = 0.0.6
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:datwit_contact_form/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -p no:warnings

[bdist_wheel]
universal = 1

[options]
install_requires = 
	python-dotenv
	boto3>=1.23.9
	boto3-stubs
	boto3-stubs[ses,dynamodb]
